// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Timeline > it works with defaults 1`] = `
<ol
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6"
  data-testid="Timeline"
>
  <li
    class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-medium_6f2e26 _item_926827"
    data-testid="Box"
  >
    <div
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-medium_6f2e26"
      data-testid="Box"
    >
      Apr 2021
       – 
      Present
    </div>
    <div
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-medium_6f2e26 _meta_926827"
      data-testid="Box"
    >
      <div
        class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6"
        data-testid="Text"
      >
        Senior Software Engineer
      </div>
      <div
        class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
        data-testid="Box"
      >
        <a
          class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6 _this_ef752c _urlTitle_926827"
          data-testid="Link"
          href="https://www.lendinvest.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_ef752c"
            data-testid="Link-inner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-right-from-square _icon_ef752c"
              data-icon="arrow-up-right-from-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l82.7 0L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3l0 82.7c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160c0-17.7-14.3-32-32-32L320 0zM80 32C35.8 32 0 67.8 0 112L0 432c0 44.2 35.8 80 80 80l320 0c44.2 0 80-35.8 80-80l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 112c0 8.8-7.2 16-16 16L80 448c-8.8 0-16-7.2-16-16l0-320c0-8.8 7.2-16 16-16l112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L80 32z"
                fill="currentColor"
              />
            </svg>
            LendInvest
          </span>
        </a>
      </div>
    </div>
  </li>
  <li
    class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-medium_6f2e26 _item_926827"
    data-testid="Box"
  >
    <div
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-medium_6f2e26"
      data-testid="Box"
    >
      Feb 2020
       – 
      Apr 2021
    </div>
    <div
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-medium_6f2e26 _meta_926827"
      data-testid="Box"
    >
      <div
        class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6"
        data-testid="Text"
      >
        Frontend Software Developer
      </div>
      <div
        class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
        data-testid="Box"
      >
        <a
          class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6 _this_ef752c _urlTitle_926827"
          data-testid="Link"
          href="https://www.goldencharter.co.uk/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_ef752c"
            data-testid="Link-inner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-right-from-square _icon_ef752c"
              data-icon="arrow-up-right-from-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l82.7 0L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3l0 82.7c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160c0-17.7-14.3-32-32-32L320 0zM80 32C35.8 32 0 67.8 0 112L0 432c0 44.2 35.8 80 80 80l320 0c44.2 0 80-35.8 80-80l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 112c0 8.8-7.2 16-16 16L80 448c-8.8 0-16-7.2-16-16l0-320c0-8.8 7.2-16 16-16l112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L80 32z"
                fill="currentColor"
              />
            </svg>
            Golden Charter
          </span>
        </a>
      </div>
    </div>
  </li>
</ol>
`;

exports[`Timeline > it works with sizes 1`] = `
<ol
  class="_this_d6c5f6 _size-small_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6"
  data-testid="Timeline"
>
  <li
    class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-small_6f2e26 _item_926827"
    data-testid="Box"
  >
    <div
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-small_6f2e26"
      data-testid="Box"
    >
      Apr 2021
       – 
      Present
    </div>
    <div
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-small_6f2e26 _meta_926827"
      data-testid="Box"
    >
      <div
        class="_this_d6c5f6 _size-small_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6"
        data-testid="Text"
      >
        Senior Software Engineer
      </div>
      <div
        class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
        data-testid="Box"
      >
        <a
          class="_this_d6c5f6 _size-small_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6 _this_ef752c _urlTitle_926827"
          data-testid="Link"
          href="https://www.lendinvest.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_ef752c"
            data-testid="Link-inner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-right-from-square _icon_ef752c"
              data-icon="arrow-up-right-from-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l82.7 0L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3l0 82.7c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160c0-17.7-14.3-32-32-32L320 0zM80 32C35.8 32 0 67.8 0 112L0 432c0 44.2 35.8 80 80 80l320 0c44.2 0 80-35.8 80-80l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 112c0 8.8-7.2 16-16 16L80 448c-8.8 0-16-7.2-16-16l0-320c0-8.8 7.2-16 16-16l112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L80 32z"
                fill="currentColor"
              />
            </svg>
            LendInvest
          </span>
        </a>
      </div>
    </div>
  </li>
  <li
    class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-small_6f2e26 _item_926827"
    data-testid="Box"
  >
    <div
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-small_6f2e26"
      data-testid="Box"
    >
      Feb 2020
       – 
      Apr 2021
    </div>
    <div
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-small_6f2e26 _meta_926827"
      data-testid="Box"
    >
      <div
        class="_this_d6c5f6 _size-small_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6"
        data-testid="Text"
      >
        Frontend Software Developer
      </div>
      <div
        class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
        data-testid="Box"
      >
        <a
          class="_this_d6c5f6 _size-small_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6 _this_ef752c _urlTitle_926827"
          data-testid="Link"
          href="https://www.goldencharter.co.uk/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_ef752c"
            data-testid="Link-inner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-right-from-square _icon_ef752c"
              data-icon="arrow-up-right-from-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l82.7 0L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3l0 82.7c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160c0-17.7-14.3-32-32-32L320 0zM80 32C35.8 32 0 67.8 0 112L0 432c0 44.2 35.8 80 80 80l320 0c44.2 0 80-35.8 80-80l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 112c0 8.8-7.2 16-16 16L80 448c-8.8 0-16-7.2-16-16l0-320c0-8.8 7.2-16 16-16l112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L80 32z"
                fill="currentColor"
              />
            </svg>
            Golden Charter
          </span>
        </a>
      </div>
    </div>
  </li>
</ol>
`;

exports[`Timeline > it works with sizes 2`] = `
<ol
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6"
  data-testid="Timeline"
>
  <li
    class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-medium_6f2e26 _item_926827"
    data-testid="Box"
  >
    <div
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-medium_6f2e26"
      data-testid="Box"
    >
      Apr 2021
       – 
      Present
    </div>
    <div
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-medium_6f2e26 _meta_926827"
      data-testid="Box"
    >
      <div
        class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6"
        data-testid="Text"
      >
        Senior Software Engineer
      </div>
      <div
        class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
        data-testid="Box"
      >
        <a
          class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6 _this_ef752c _urlTitle_926827"
          data-testid="Link"
          href="https://www.lendinvest.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_ef752c"
            data-testid="Link-inner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-right-from-square _icon_ef752c"
              data-icon="arrow-up-right-from-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l82.7 0L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3l0 82.7c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160c0-17.7-14.3-32-32-32L320 0zM80 32C35.8 32 0 67.8 0 112L0 432c0 44.2 35.8 80 80 80l320 0c44.2 0 80-35.8 80-80l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 112c0 8.8-7.2 16-16 16L80 448c-8.8 0-16-7.2-16-16l0-320c0-8.8 7.2-16 16-16l112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L80 32z"
                fill="currentColor"
              />
            </svg>
            LendInvest
          </span>
        </a>
      </div>
    </div>
  </li>
  <li
    class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-medium_6f2e26 _item_926827"
    data-testid="Box"
  >
    <div
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-medium_6f2e26"
      data-testid="Box"
    >
      Feb 2020
       – 
      Apr 2021
    </div>
    <div
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-medium_6f2e26 _meta_926827"
      data-testid="Box"
    >
      <div
        class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6"
        data-testid="Text"
      >
        Frontend Software Developer
      </div>
      <div
        class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
        data-testid="Box"
      >
        <a
          class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6 _this_ef752c _urlTitle_926827"
          data-testid="Link"
          href="https://www.goldencharter.co.uk/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_ef752c"
            data-testid="Link-inner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-right-from-square _icon_ef752c"
              data-icon="arrow-up-right-from-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l82.7 0L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3l0 82.7c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160c0-17.7-14.3-32-32-32L320 0zM80 32C35.8 32 0 67.8 0 112L0 432c0 44.2 35.8 80 80 80l320 0c44.2 0 80-35.8 80-80l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 112c0 8.8-7.2 16-16 16L80 448c-8.8 0-16-7.2-16-16l0-320c0-8.8 7.2-16 16-16l112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L80 32z"
                fill="currentColor"
              />
            </svg>
            Golden Charter
          </span>
        </a>
      </div>
    </div>
  </li>
</ol>
`;

exports[`Timeline > it works with sizes 3`] = `
<ol
  class="_this_d6c5f6 _size-large_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6"
  data-testid="Timeline"
>
  <li
    class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-large_6f2e26 _item_926827"
    data-testid="Box"
  >
    <div
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-large_6f2e26"
      data-testid="Box"
    >
      Apr 2021
       – 
      Present
    </div>
    <div
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-large_6f2e26 _meta_926827"
      data-testid="Box"
    >
      <div
        class="_this_d6c5f6 _size-large_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6"
        data-testid="Text"
      >
        Senior Software Engineer
      </div>
      <div
        class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
        data-testid="Box"
      >
        <a
          class="_this_d6c5f6 _size-large_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6 _this_ef752c _urlTitle_926827"
          data-testid="Link"
          href="https://www.lendinvest.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_ef752c"
            data-testid="Link-inner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-right-from-square _icon_ef752c"
              data-icon="arrow-up-right-from-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l82.7 0L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3l0 82.7c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160c0-17.7-14.3-32-32-32L320 0zM80 32C35.8 32 0 67.8 0 112L0 432c0 44.2 35.8 80 80 80l320 0c44.2 0 80-35.8 80-80l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 112c0 8.8-7.2 16-16 16L80 448c-8.8 0-16-7.2-16-16l0-320c0-8.8 7.2-16 16-16l112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L80 32z"
                fill="currentColor"
              />
            </svg>
            LendInvest
          </span>
        </a>
      </div>
    </div>
  </li>
  <li
    class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-large_6f2e26 _item_926827"
    data-testid="Box"
  >
    <div
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-large_6f2e26"
      data-testid="Box"
    >
      Feb 2020
       – 
      Apr 2021
    </div>
    <div
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-large_6f2e26 _meta_926827"
      data-testid="Box"
    >
      <div
        class="_this_d6c5f6 _size-large_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6"
        data-testid="Text"
      >
        Frontend Software Developer
      </div>
      <div
        class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
        data-testid="Box"
      >
        <a
          class="_this_d6c5f6 _size-large_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6 _this_ef752c _urlTitle_926827"
          data-testid="Link"
          href="https://www.goldencharter.co.uk/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_ef752c"
            data-testid="Link-inner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-right-from-square _icon_ef752c"
              data-icon="arrow-up-right-from-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l82.7 0L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3l0 82.7c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160c0-17.7-14.3-32-32-32L320 0zM80 32C35.8 32 0 67.8 0 112L0 432c0 44.2 35.8 80 80 80l320 0c44.2 0 80-35.8 80-80l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 112c0 8.8-7.2 16-16 16L80 448c-8.8 0-16-7.2-16-16l0-320c0-8.8 7.2-16 16-16l112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L80 32z"
                fill="currentColor"
              />
            </svg>
            Golden Charter
          </span>
        </a>
      </div>
    </div>
  </li>
</ol>
`;
